# AnalyseCSV

./: CMakeLists.txt  таблица.csv
include/: CSVAnalyzer.h  ChartCreator.h  Review.h  ReviewProcessor.h  SentimentAnalyzer.h
resource/: CSVAnalyzer.ui
source/: CSVAnalyzer.cpp  ChartCreator.cpp  ReviewProcessor.cpp  SentimentAnalyzer.cpp  main.cpp
